Fix header image on mobile

--- a/style/body/header.scss
+++ b/style/body/header.scss
@@ -30,7 +30,7 @@ header {
         flex-direction: column;
         padding: 0%;
         justify-content: center;
-        background: linear-gradient(to right, rgba(255, 255, 255, 0.179), whitesmoke), url('../../assets/images/avatars-Lo9oruaAMvM5QsWL-0uJ23w-t500x500.jpg') top left/auto 100% no-repeat;
+        background: linear-gradient(to right, rgba(255, 255, 255, 0.179), whitesmoke), url('../../assets/images/stylus.jpg') top left/auto 100% no-repeat;
     }
 
     @media only screen and (max-width: $bp-small) {
